--- a/sass/layouts/_faq.scss
+++ b/sass/layouts/_faq.scss
@@ -191,4 +191,107 @@
             font-size: 16px;
         }
     }
+
+    &__questions {
+        margin-top: 92px;
+        padding: 0 36px 0 36px;
+        width: 1300px;
+        height: 605px;
+        text-align: left;
+        outline: 1px solid tomato;
+    }
+
+    &__questions-list {}
+
+    &__questions-item {
+        display: flex;
+        align-items: start;
+        margin-bottom: 20px;
+        height: 44px;
+        cursor: pointer;
+        outline: 1px solid green;
+
+        color: #15100F;
+        font-family: Inter;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 100%;
+
+        &:not(:last-child)::before {
+            content: '';
+            position: absolute;
+            margin-top: 44px;
+            margin-left: -36px;
+            width: 1301px;
+            height: 1px;
+            // border-radius: 8px;
+            background: #F1D0D9;
+        }
+
+        &:hover {
+            align-items: start;
+            height: 128px;
+        }
+
+        &:hover::before {
+            margin-top: 128px;
+        }
+
+        // &:first-child {
+        //     height: 32px;
+        // }
+
+        // &:last-child {
+        //     height: 26px;
+        // }
+
+
+        &:hover .faq__text--hidden {
+            // height: 128px;
+            margin-top: 28px;
+            opacity: 1;
+        }
+
+
+        &:hover .faq__text--vision::before {
+            // margin-top: 120px;
+        }
+    }
+
+    &__text-group {
+        display: flex;
+        // justify-content: space-between;
+        align-items: center;
+
+    }
+
+    // &__questions-text {
+    //     color: #15100F;
+    //     font-family: Inter;
+    //     font-size: 24px;
+    //     font-style: normal;
+    //     font-weight: 500;
+    //     line-height: 100%;
+    // }
+
+    &__text--vision {}
+
+    &__questions-text--icon {
+        position: absolute;
+        right: 317px;
+        width: 28px;
+        height: 17px;
+    }
+
+    &__text--hidden {
+        color: #563831;
+        font-size: 20px;
+        font-weight: 300;
+        position: absolute;
+        opacity: 0;
+        transition: opacity 0.3s ease-in-out;
+    }
+
+
 }
