--- a/css/main.css
+++ b/css/main.css
@@ -2742,18 +2742,27 @@ body {
   padding: 0 36px 0 36px;
   width: 1300px;
   height: 605px;
-  text-align: left;
 }
 .faq__questions-item {
-  display: flex;
-  align-items: start;
-  margin-bottom: 20px;
-  height: 44px;
-  color: var(--text_color);
+  position: relative;
   font-family: var(--text_font);
   font-size: 20px;
   font-weight: 500;
   line-height: 100%;
+  text-align: left;
+  color: var(--text_color);
+}
+.faq__questions-item:not(:first-child) {
+  margin-top: 40px;
+  cursor: pointer;
+}
+.faq__questions-item:not(:first-child)::before {
+  content: "";
+  position: absolute;
+  top: -20px;
+  width: 100%;
+  height: 1px;
+  background: #F1D0D9;
 }
 .faq__questions-item:first-child {
   margin-left: -36px;
@@ -2764,31 +2773,14 @@ body {
 .faq__questions-item:first-child::before {
   margin-left: 0px;
 }
-.faq__questions-item:not(:first-child) {
-  cursor: pointer;
-}
-.faq__questions-item:not(:first-child):active {
-  align-items: start;
-  height: 92px;
-}
-.faq__questions-item:not(:first-child):active .faq__text--hidden {
-  margin-top: 28px;
+.faq__questions-item.active .faq__text--hidden {
+  position: relative;
+  left: 0;
   opacity: 1;
+  transition: left 0.5s ease-in-out, opacity 0.5s ease-in-out;
 }
-.faq__questions-item:active .faq__questions-text--icon {
+.faq__questions-item.active .faq__questions-text--icon {
   opacity: 0;
-}
-.faq__questions-item::before {
-  content: "";
-  position: absolute;
-  margin-top: 44px;
-  margin-left: -36px;
-  width: 1301px;
-  height: 1px;
-  background: #F1D0D9;
-}
-.faq__questions-item:not(:first-child):active::before {
-  margin-top: 92px;
 }
 .faq__text-group {
   display: flex;
@@ -2796,18 +2788,27 @@ body {
 }
 .faq__questions-text--icon {
   position: absolute;
-  right: 317px;
+  right: 36px;
   width: 28px;
   height: 17px;
   opacity: 1;
 }
 .faq__text--hidden {
   position: absolute;
-  width: 1228px;
-  color: var(--title_color);
-  font-size: 20px;
+  left: -100%;
+  margin-top: 20px;
+  margin-left: 36px;
+  padding: 4px 8px 4px 8px;
+  width: 1080px;
   font-weight: 300;
+  line-height: 1.2;
+  color: var(--title_color);
   word-wrap: break-word;
+  background-color: var(--blue_color);
+  border: 2px solid var(--orange_color);
+  border-radius: 8px;
   opacity: 0;
-  transition: opacity 0.3s ease-in-out;
+}
+.faq__text--hidden::first-line {
+  margin-top: -0.2em;
 }/*# sourceMappingURL=main.css.map */
