--- a/sass/layouts/_faq.scss
+++ b/sass/layouts/_faq.scss
@@ -1,4 +1,7 @@
+// FAQ SECTION
 .faq {
+
+    // СЕКЦИЯ СТРЕЛОК С ТЕКСТОМ СТАРТ-ФИНИШ
     &__arrows-section {
         position: relative;
         margin-top: 48px;
@@ -28,6 +31,7 @@
         }
     }
 
+    // Свойства иконок Старт-Финиш
     &__arrows-block {
         width: 100px;
         height: 100px;
@@ -68,6 +72,7 @@
         }
     }
 
+    // Свойства заголовка
     &__arrows-caption {
         display: none;
 
@@ -95,6 +100,7 @@
         }
     }
 
+    // Весь блок стрелок с кестом
     &__arrows-list {
         position: absolute;
         top: 0;
@@ -116,12 +122,14 @@
         }
     }
 
+    // Блок одной стрелки
     &__arrows-item {
         display: flex;
         justify-content: center;
         align-items: center;
     }
 
+    // Стрелка для tab/deck/mac версий
     &__arrows-icon {
         display: none;
 
@@ -140,17 +148,19 @@
             width: 260px;
             height: 80px;
         }
-    }
 
-    &__arrows-icon--mob {
-        width: 212px;
-        height: 88px;
+        // Стрелка для мобильной версии
+        &--mob {
+            width: 212px;
+            height: 88px;
 
-        @media screen and (min-width: 834px) {
-            display: none;
+            @media screen and (min-width: 834px) {
+                display: none;
+            }
         }
     }
 
+    // Текст в стрелке
     &__arrows-text {
         position: absolute;
         display: flex;
@@ -187,96 +197,102 @@
         }
     }
 
+    // БЛОК ВОПРОСОВ
     &__questions {
         margin-top: 92px;
         padding: 0 36px 0 36px;
         width: 1300px;
         height: 605px;
-        text-align: left;
-        // outline: 1px solid tomato;
     }
 
+    // Свойства видимого текста
     &__questions-item {
-        display: flex;
-        align-items: start;
-        margin-bottom: 20px;
-        height: 44px;
-        color: var(--text_color);
+        position: relative;
         font-family: var(--text_font);
         font-size: 20px;
         font-weight: 500;
         line-height: 100%;
-        // outline: 1px solid green;
+        text-align: left;
+        color: var(--text_color);
 
+        // Видимый текст кроме первой строки
+        &:not(:first-child) {
+            margin-top: 40px;
+            cursor: pointer;
+        }
+
+        // Нижнее подчёркивание секции вопроса
+        &:not(:first-child)::before {
+            content: '';
+            position: absolute;
+            top: -20px;
+            width: 100%;
+            height: 1px;
+            background: #F1D0D9;
+        }
+
+        // Свойства первой строки
         &:first-child {
             margin-left: -36px;
             color: var(--first-accent_color);
             font-family: var(--title_font);
             font-size: 22px;
+
+            // Отступ первой строки
+            &::before {
+                margin-left: 0px;
+            }
         }
 
-        &:first-child::before {
-            margin-left: 0px;
-        }
-
-        &:not(:first-child) {
-            cursor: pointer;
-        }
-
-        &:not(:first-child):active {
-            align-items: start;
-            height: 92px;
-            // transition: opacity 5s ease-in-out;
-        }
-
-
-        &:not(:first-child):active .faq__text--hidden {
-            margin-top: 28px;
+        // Активация скрытого текста
+        &.active .faq__text--hidden {
+            position: relative;
+            left: 0;
             opacity: 1;
-            // transition: opacity 0.5s ease-in-out;
+            transition: left 0.5s ease-in-out, opacity 0.5s ease-in-out;
         }
 
-        &:active .faq__questions-text--icon {
+        // Исчезновение стрелочки секции вопроса при активации
+        &.active .faq__questions-text--icon {
             opacity: 0;
-        }
-
-        &::before {
-            content: '';
-            position: absolute;
-            margin-top: 44px;
-            margin-left: -36px;
-            width: 1301px;
-            height: 1px;
-            background: #F1D0D9;
-        }
-
-        &:not(:first-child):active::before {
-            margin-top: 92px;
-            // transition: opacity 1s ease-in-out;
         }
     }
 
+    // Секция видимого текста со стрелочкой
     &__text-group {
         display: flex;
         align-items: center;
     }
 
+    // Свойства стрелочки секции
     &__questions-text--icon {
         position: absolute;
-        right: 317px;
+        right: 36px;
         width: 28px;
         height: 17px;
         opacity: 1;
     }
 
+    // Свойства скрытого текста
     &__text--hidden {
         position: absolute;
-        width: 1228px;
-        color: var(--title_color);
-        font-size: 20px;
+        left: -100%;
+        margin-top: 20px;
+        margin-left: 36px;
+        padding: 4px 8px 4px 8px;
+        width: 1080px;
         font-weight: 300;
+        line-height: 1.2;
+        color: var(--title_color);
         word-wrap: break-word;
+        background-color: var(--blue_color);
+        border: 2px solid var(--orange_color);
+        border-radius: 8px;
         opacity: 0;
-        transition: opacity 0.3s ease-in-out;
+
+        // Выравнивание первой строки скрытого текста
+        &::first-line {
+            margin-top: -0.2em;
+        }
     }
 }
