--- a/css/main.css
+++ b/css/main.css
@@ -2738,46 +2738,105 @@ body {
   }
 }
 .faq__questions {
-  margin-top: 92px;
-  padding: 0 36px 0 36px;
-  width: 1300px;
-  height: 605px;
+  margin-top: 48px;
+}
+@media screen and (min-width: 1440px) {
+  .faq__questions {
+    margin-top: 80px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .faq__questions {
+    margin-top: 92px;
+  }
 }
 .faq__questions-item {
   position: relative;
   font-family: var(--text_font);
-  font-size: 20px;
+  font-size: 12px;
   font-weight: 500;
-  line-height: 100%;
+  line-height: 1.2;
+  letter-spacing: 0.05em;
   text-align: left;
   color: var(--text_color);
 }
+@media screen and (min-width: 834px) {
+  .faq__questions-item {
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .faq__questions-item {
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .faq__questions-item {
+    font-size: 22px;
+  }
+}
+.faq__questions-item::first-line {
+  margin-top: -0.2em;
+}
 .faq__questions-item:not(:first-child) {
-  margin-top: 40px;
+  margin-top: 25px;
   cursor: pointer;
+}
+@media screen and (min-width: 834px) {
+  .faq__questions-item:not(:first-child) {
+    margin-top: 33px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .faq__questions-item:not(:first-child) {
+    margin-top: 41px;
+  }
+}
+.faq__questions-item:first-child {
+  font-family: var(--title_font);
+  text-align: center;
+  font-size: 14px;
+  color: var(--first-accent_color);
+}
+@media screen and (min-width: 834px) {
+  .faq__questions-item:first-child {
+    text-align: left;
+    font-size: 18px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .faq__questions-item:first-child {
+    font-size: 22px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .faq__questions-item:first-child {
+    font-size: 24px;
+  }
 }
 .faq__questions-item:not(:first-child)::before {
   content: "";
   position: absolute;
-  top: -20px;
+  top: -12px;
   width: 100%;
   height: 1px;
-  background: #F1D0D9;
+  background: var(--second-accent_color);
 }
-.faq__questions-item:first-child {
-  margin-left: -36px;
-  color: var(--first-accent_color);
-  font-family: var(--title_font);
-  font-size: 22px;
+@media screen and (min-width: 834px) {
+  .faq__questions-item:not(:first-child)::before {
+    top: -16px;
+  }
 }
-.faq__questions-item:first-child::before {
-  margin-left: 0px;
+@media screen and (min-width: 1440px) {
+  .faq__questions-item:not(:first-child)::before {
+    top: -20px;
+  }
 }
 .faq__questions-item.active .faq__text--hidden {
   position: relative;
   left: 0;
   opacity: 1;
-  transition: left 0.5s ease-in-out, opacity 0.5s ease-in-out;
+  transition: left 0.4s ease-in-out, opacity 0.5s ease-in-out;
 }
 .faq__questions-item.active .faq__questions-text--icon {
   opacity: 0;
@@ -2785,21 +2844,55 @@ body {
 .faq__text-group {
   display: flex;
   align-items: center;
+  width: 300px;
+}
+@media screen and (min-width: 834px) {
+  .faq__text-group {
+    padding-left: 16px;
+    width: 676px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .faq__text-group {
+    padding-left: 26px;
+    width: 900px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .faq__text-group {
+    width: 1100px;
+  }
 }
 .faq__questions-text--icon {
   position: absolute;
-  right: 36px;
-  width: 28px;
-  height: 17px;
+  right: 0;
+  width: 16px;
+  height: 10px;
   opacity: 1;
+}
+@media screen and (min-width: 834px) {
+  .faq__questions-text--icon {
+    right: 16px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .faq__questions-text--icon {
+    right: 26px;
+    width: 20px;
+    height: 12px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .faq__questions-text--icon {
+    width: 28px;
+    height: 17px;
+  }
 }
 .faq__text--hidden {
   position: absolute;
   left: -100%;
-  margin-top: 20px;
-  margin-left: 36px;
-  padding: 4px 8px 4px 8px;
-  width: 1080px;
+  margin-top: 12px;
+  padding: 2px 4px 2px 4px;
   font-weight: 300;
   line-height: 1.2;
   color: var(--title_color);
@@ -2808,6 +2901,30 @@ body {
   border: 2px solid var(--orange_color);
   border-radius: 8px;
   opacity: 0;
+}
+@media screen and (min-width: 834px) {
+  .faq__text--hidden {
+    margin-top: 16px;
+    margin-left: 16px;
+    padding: 2px 6px 2px 6px;
+    width: 688px;
+    font-size: 14px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .faq__text--hidden {
+    margin-top: 20px;
+    margin-left: 26px;
+    padding: 4px 8px 4px 8px;
+    width: 952px;
+    font-size: 18px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .faq__text--hidden {
+    width: 1188px;
+    font-size: 20px;
+  }
 }
 .faq__text--hidden::first-line {
   margin-top: -0.2em;
