--- a/sass/layouts/_faq.scss
+++ b/sass/layouts/_faq.scss
@@ -199,48 +199,94 @@
 
     // БЛОК ВОПРОСОВ
     &__questions {
-        margin-top: 92px;
-        padding: 0 36px 0 36px;
-        width: 1300px;
-        height: 605px;
+        margin-top: 48px;
+
+        @media screen and (min-width: 1440px) {
+            margin-top: 80px;
+        }
+
+        @media screen and (min-width: 1728px) {
+            margin-top: 92px;
+        }
     }
 
     // Свойства видимого текста
     &__questions-item {
         position: relative;
         font-family: var(--text_font);
-        font-size: 20px;
+        font-size: 12px;
         font-weight: 500;
-        line-height: 100%;
+        line-height: 1.2;
+        letter-spacing: 0.05em;
         text-align: left;
         color: var(--text_color);
 
-        // Видимый текст кроме первой строки
+        @media screen and (min-width: 834px) {
+            font-size: 16px;
+        }
+
+        @media screen and (min-width: 1440px) {
+            font-size: 20px;
+        }
+
+        @media screen and (min-width: 1728px) {
+            font-size: 22px;
+        }
+
+        &::first-line {
+            margin-top: -0.2em;
+        }
+
+        // Отступ от вопроса до вопроса
         &:not(:first-child) {
-            margin-top: 40px;
+            margin-top: 25px;
             cursor: pointer;
+
+            @media screen and (min-width: 834px) {
+                margin-top: 33px;
+            }
+
+            @media screen and (min-width: 1440px) {
+                margin-top: 41px;
+            }
+        }
+
+        // Свойства первой строки
+        &:first-child {
+            font-family: var(--title_font);
+            text-align: center;
+            font-size: 14px;
+            color: var(--first-accent_color);
+
+            @media screen and (min-width: 834px) {
+                text-align: left;
+                font-size: 18px;
+            }
+
+            @media screen and (min-width: 1440px) {
+                font-size: 22px;
+            }
+
+            @media screen and (min-width: 1728px) {
+                font-size: 24px;
+            }
         }
 
         // Нижнее подчёркивание секции вопроса
         &:not(:first-child)::before {
             content: '';
             position: absolute;
-            top: -20px;
+            top: -12px;
             width: 100%;
             height: 1px;
-            background: #F1D0D9;
-        }
+            background: var(--second-accent_color);
 
-        // Свойства первой строки
-        &:first-child {
-            margin-left: -36px;
-            color: var(--first-accent_color);
-            font-family: var(--title_font);
-            font-size: 22px;
+            @media screen and (min-width: 834px) {
+                top: -16px;
+            }
 
-            // Отступ первой строки
-            &::before {
-                margin-left: 0px;
+            @media screen and (min-width: 1440px) {
+                top: -20px;
             }
         }
 
@@ -249,7 +295,7 @@
             position: relative;
             left: 0;
             opacity: 1;
-            transition: left 0.5s ease-in-out, opacity 0.5s ease-in-out;
+            transition: left 0.4s ease-in-out, opacity 0.5s ease-in-out;
         }
 
         // Исчезновение стрелочки секции вопроса при активации
@@ -262,25 +308,53 @@
     &__text-group {
         display: flex;
         align-items: center;
+        width: 300px;
+
+        @media screen and (min-width: 834px) {
+            padding-left: 16px;
+            width: 676px;
+        }
+
+        @media screen and (min-width: 1440px) {
+            padding-left: 26px;
+            width: 900px;
+        }
+
+        @media screen and (min-width: 1728px) {
+            width: 1100px;
+        }
     }
 
     // Свойства стрелочки секции
     &__questions-text--icon {
         position: absolute;
-        right: 36px;
-        width: 28px;
-        height: 17px;
+        right: 0;
+        width: 16px;
+        height: 10px;
         opacity: 1;
+
+        @media screen and (min-width: 834px) {
+            right: 16px;
+        }
+
+        @media screen and (min-width: 1440px) {
+            right: 26px;
+            width: 20px;
+            height: 12px;
+        }
+
+        @media screen and (min-width: 1728px) {
+            width: 28px;
+            height: 17px;
+        }
     }
 
     // Свойства скрытого текста
     &__text--hidden {
         position: absolute;
         left: -100%;
-        margin-top: 20px;
-        margin-left: 36px;
-        padding: 4px 8px 4px 8px;
-        width: 1080px;
+        margin-top: 12px;
+        padding: 2px 4px 2px 4px;
         font-weight: 300;
         line-height: 1.2;
         color: var(--title_color);
@@ -289,6 +363,27 @@
         border: 2px solid var(--orange_color);
         border-radius: 8px;
         opacity: 0;
+
+        @media screen and (min-width: 834px) {
+            margin-top: 16px;
+            margin-left: 16px;
+            padding: 2px 6px 2px 6px;
+            width: 688px;
+            font-size: 14px;
+        }
+
+        @media screen and (min-width: 1440px) {
+            margin-top: 20px;
+            margin-left: 26px;
+            padding: 4px 8px 4px 8px;
+            width: 952px;
+            font-size: 18px;
+        }
+
+        @media screen and (min-width: 1728px) {
+            width: 1188px;
+            font-size: 20px;
+        }
 
         // Выравнивание первой строки скрытого текста
         &::first-line {
