--- a/css/main.css
+++ b/css/main.css
@@ -2928,4 +2928,79 @@ body {
 }
 .faq__text--hidden::first-line {
   margin-top: -0.2em;
+}
+
+.contacts {
+  position: relative;
+  outline: 1px solid tomato;
+}
+.contacts_caption {
+  margin-left: -80px;
+}
+.contacts__list {
+  display: flex;
+  justify-content: space-between;
+  margin-top: -64px;
+}
+.contacts__link {
+  margin-bottom: 18px;
+  width: 504px;
+  height: 560px;
+  border-radius: 8px;
+  border: 4px solid #FFF;
+  background: lightgray -227.05px -127.969px/149.257% 132.812% no-repeat;
+  box-shadow: 0px 4px 40px 0px rgba(21, 16, 15, 0.25);
+}
+.contacts__text {
+  position: absolute;
+  border-radius: 8px;
+  background: linear-gradient(103deg, rgba(251, 242, 228, 0.7) 0%, rgba(251, 242, 228, 0) 100%);
+  box-shadow: 0px 4px 10px 0px rgba(21, 16, 15, 0.25);
+  -webkit-backdrop-filter: blur(65px);
+          backdrop-filter: blur(65px);
+  color: #563831;
+  font-family: Inter;
+  font-size: 22px;
+  text-align: left;
+  letter-spacing: 0.05em;
+}
+.contacts__text--caption {
+  color: #563831;
+  font-family: PT Sans Caption;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  letter-spacing: 0.1em;
+}
+.contacts__adress {
+  top: 259px;
+  left: 418px;
+  width: 352px;
+  height: 176px;
+  padding: 18px;
+}
+.contacts__adress--reverse {
+  top: 259px;
+  right: 418px;
+  width: 352px;
+  height: 176px;
+  padding: 18px;
+  text-align: right;
+  display: table-cell;
+  vertical-align: middle;
+}
+.contacts__working {
+  top: 450px;
+  left: 482px;
+  width: 288px;
+  height: 140px;
+  padding-left: 18px;
+}
+.contacts__working--reverse {
+  top: 450px;
+  right: 482px;
+  width: 288px;
+  height: 140px;
+  padding-left: 18px;
+  text-align: right;
 }/*# sourceMappingURL=main.css.map */
