--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,8 +32,10 @@
 //Photo gallery section
 @import 'layouts/gallery';
 
-// Faq section
+// FAQ section
 @import 'layouts/faq';
-// @import 'layouts/faq111';
+
+// Contacts section
+@import 'layouts/contacts';
 
 // Footer-section
