--- a/css/main.css
+++ b/css/main.css
@@ -3208,4 +3208,81 @@ body {
   .contacts__call--caption {
     font-size: 32px;
   }
+}
+
+.footer-section {
+  position: relative;
+  height: 340px;
+  box-shadow: inset 0 1px 4px 0 rgba(21, 16, 15, 0.25);
+  background-color: #e2e7eb;
+  margin-top: 80px;
+  padding-top: 40px;
+}
+
+.footer {
+  display: flex;
+}
+.footer__button {
+  height: 64px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 4px 4px 0 rgba(21, 16, 15, 0.25);
+  background: linear-gradient(90deg, #fff 0%, rgba(255, 255, 255, 0) 100%);
+  border-radius: 8px;
+  border: 0px;
+  margin-bottom: 116px;
+}
+.footer__button--1 {
+  width: 554px;
+  margin-left: 80px;
+}
+.footer__button--2 {
+  width: 500px;
+  margin-left: 37px;
+  margin-right: 37px;
+}
+.footer__button--3 {
+  width: 440px;
+}
+.footer__button--text {
+  font-family: var(--title_font);
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 100%;
+  color: var(--title_color);
+}
+.footer__button--text2 {
+  margin-left: 22px;
+  font-weight: 400;
+  font-size: 20px;
+  text-decoration: underline;
+}
+.footer__list {
+  position: absolute;
+  top: 136px;
+  display: flex;
+}
+.footer__list-item {
+  outline: 1px solid tomato;
+}
+.footer__list-icon {
+  width: 52px;
+  height: 52px;
+}
+.footer__requisites {
+  width: 1728px;
+  height: 120px;
+  padding-top: 12px;
+  background-color: white;
+  display: block;
+  width: 100%;
+  outline: 1px solid tomato;
+  font-family: var(--text_font);
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 130%;
+  letter-spacing: 0.05em;
+  text-align: center;
+  color: var(--text_color);
 }/*# sourceMappingURL=main.css.map */
