--- a/css/main.css
+++ b/css/main.css
@@ -3211,72 +3211,81 @@ body {
 }
 
 .footer-section {
-  position: relative;
   height: 340px;
-  box-shadow: inset 0 1px 4px 0 rgba(21, 16, 15, 0.25);
-  background-color: #e2e7eb;
+  position: relative;
   margin-top: 80px;
   padding-top: 40px;
+  box-shadow: inset 0 1px 4px 0 rgba(21, 16, 15, 0.25);
+  background-color: #e2e7eb;
 }
-
 .footer {
   display: flex;
 }
-.footer__button {
+.footer__button-list {
+  display: flex;
+}
+.footer__button-item {
   height: 64px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  margin-bottom: 116px;
+  padding-left: 20px;
+  padding-right: 20px;
   box-shadow: 0 4px 4px 0 rgba(21, 16, 15, 0.25);
   background: linear-gradient(90deg, #fff 0%, rgba(255, 255, 255, 0) 100%);
   border-radius: 8px;
-  border: 0px;
-  margin-bottom: 116px;
 }
-.footer__button--1 {
+.footer__button-item--1 {
   width: 554px;
   margin-left: 80px;
 }
-.footer__button--2 {
+.footer__button-item--2 {
   width: 500px;
   margin-left: 37px;
   margin-right: 37px;
 }
-.footer__button--3 {
+.footer__button-item--3 {
   width: 440px;
 }
-.footer__button--text {
+.footer__button-text {
   font-family: var(--title_font);
   font-weight: 700;
   font-size: 24px;
-  line-height: 100%;
+  letter-spacing: normal;
   color: var(--title_color);
 }
-.footer__button--text2 {
-  margin-left: 22px;
+.footer__button-text--2 {
   font-weight: 400;
   font-size: 20px;
   text-decoration: underline;
 }
-.footer__list {
+.footer__icon-list {
   position: absolute;
   top: 136px;
+  left: 784px;
   display: flex;
 }
-.footer__list-item {
-  outline: 1px solid tomato;
+.footer__icon-item:last-child {
+  margin-left: 56px;
 }
-.footer__list-icon {
+.footer__icon {
   width: 52px;
   height: 52px;
+  border-radius: 50%;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+.footer__icon:hover {
+  box-shadow: none;
+  fill: aqua;
 }
 .footer__requisites {
   width: 1728px;
   height: 120px;
   padding-top: 12px;
-  background-color: white;
   display: block;
   width: 100%;
+  background-color: white;
   outline: 1px solid tomato;
   font-family: var(--text_font);
   font-weight: 300;
