--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,28 +1,36 @@
 .footer-section {
-    position: relative;
     height: 340px;
-    box-shadow: inset 0 1px 4px 0 rgba(21, 16, 15, 0.25);
-    background-color: #e2e7eb;
+    position: relative;
     margin-top: 80px;
     padding-top: 40px;
+    box-shadow: inset 0 1px 4px 0 rgba(21, 16, 15, 0.25);
+    background-color: #e2e7eb;
 
+    @media screen and (min-width: 834px) {}
+
+    @media screen and (min-width: 1440px) {}
+
+    @media screen and (min-width: 1728px) {}
 }
 
 .footer {
     display: flex;
-    // justify-content: space-between;    
 
-    &__button {
+    &__button-list {
+        display: flex;
+    }
+
+    &__button-item {
         height: 64px;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
-        // padding-left: 20px;
+        margin-bottom: 116px;
+        padding-left: 20px;
+        padding-right: 20px;
         box-shadow: 0 4px 4px 0 rgba(21, 16, 15, 0.25);
         background: linear-gradient(90deg, #fff 0%, rgba(255, 255, 255, 0) 100%);
         border-radius: 8px;
-        border: 0px;
-        margin-bottom: 116px;
 
         &--1 {
             width: 554px;
@@ -38,47 +46,52 @@
         &--3 {
             width: 440px;
         }
+    }
 
-        &--text {
-            font-family: var(--title_font);
-            font-weight: 700;
-            font-size: 24px;
-            line-height: 100%;
-            color: var(--title_color);
-        }
+    &__button-text {
+        font-family: var(--title_font);
+        font-weight: 700;
+        font-size: 24px;
+        letter-spacing: normal;
+        color: var(--title_color);
 
-        &--text2 {
-            margin-left: 22px;
+        &--2 {
             font-weight: 400;
             font-size: 20px;
             text-decoration: underline;
         }
     }
 
-    &__list {
+    &__icon-list {
         position: absolute;
         top: 136px;
+        left: 784px;
         display: flex;
     }
 
-    &__list-item {
-        outline: 1px solid tomato;
-        // width: 52px;
-        // height: 52px;
+    &__icon-item:last-child {
+        margin-left: 56px;
     }
 
-    &__list-icon {
+    &__icon {
         width: 52px;
         height: 52px;
+        border-radius: 50%;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+
+        &:hover {
+            box-shadow: none;
+            fill: aqua;
+        }
     }
 
     &__requisites {
         width: 1728px;
         height: 120px;
         padding-top: 12px;
-        background-color: white;
         display: block;
         width: 100%;
+        background-color: white;
         outline: 1px solid tomato;
 
         font-family: var(--text_font);
